Style: add glow effect to nav h1 and correct width overflow of nav and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,17 +10,23 @@
 /* Fonts
    ========================================================================== */
 body {
-    font-family: 'Roboto',
-        Arial,
-        Helvetica,
-        sans-serif;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 nav h1 {
-    font-family: 'Roboto Slab',
-        Arial,
-        Helvetica,
-        sans-serif;
+    font-family: 'Roboto Slab', Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    animation: glow 2s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+    from {
+        text-shadow: 10px 10px 100px #FC6400;
+    }
+
+    to {
+        text-shadow: 0 0 30px #FC6400, 0px 10px 10px #801100;
+    }
 }
 
 /* Layout
@@ -36,7 +42,6 @@ body {
 
 nav,
 footer {
-    width: 100%;
     height: 3vh;
     background-color: #08262C;
     color: #fff;
